(#3684) Enlarge Button Focus Cutoff Fix

--- a/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_images.scss
+++ b/docroot/profiles/custom/cgov_site/themes/custom/cgov/src/styles/_images.scss
@@ -1,8 +1,8 @@
 /****************** BEGIN images ********************/
 %enlarge-infographic {
   position: absolute;
-  top: 0;
-  right: 0;
+  top: 4px;
+  right: 4px;
   color: #fff;
   background-color: #403f3f;
   padding: 0.3125em 2.25em 0.3125em 1em;
